<resources>

    <string name="app_name">"Post'd"</string>
    <string name="menu_settings">Settings</string>
    <string name="show_news">Show News</string>
    <string name="select_sources">"Post'd Sources"</string>
    <string name="goToNews">"Get Post'd!"</string>
    <string name="set_preferences">"Set Post'd Sources"</string>
    <string name="exit">Close App</string>
    <string name="refresh">Refresh</string>
    <string name="check_all">Check All</string>
    <string name="uncheck_all">Uncheck All</string>
    <string name="to_bottom">Go To Bottom</string>
    <string name="to_top">Go To Top</string>
    <string name="ap_check">Associated Press</string>
    <string name="abc_check">ABC News</string>
    <string name="bbc_check">BBC News</string>
    <string name="cbc_check">CBC News</string>
    <string name="cbs_check">CBS News</string>
    <string name="cnn_check">CNN News</string>
    <string name="fox_check">Fox News</string>
    <string name="google_check">Google</string>
    <string name="nbc_check">NBC News</string>
	<string name="reuters_check">Reuters</string>
	<string name="time_check">Time</string>
	<string name="usatoday_check">USA Today</string>
	<string name="wn_check">World News</string>
	<string name="yahoo_check">Yahoo</string>
	<string name="twitter_webview">Sign-in to Twitter</string>
	
    <string name="gcm_title">GCM Test</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">New Post\'d articles available!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    
	<!--Facebook-->
	<string name="facebook_app_id">444682848925661</string>
	
	<!--Twitter-->
	<string name="twitter_access_token">259032327-YxrkIlFhhw1VDFkuekSY0V9mGV1FXdM8gLSvbBhX</string>
	<string name="twitter_access_token_secret">kAYww0kCaOTSlo060Qjwy6B4gzWiRE0HW4LZq9w1k</string>
	<string name="twitter_consumer_key">z8lIBCMWtHFjSiFkDuRsw</string>
	<string name="twitter_consumer_secret">8qvOhGu7gTqdPxF5vaQrEOXU5R1nAtF8njTPpK7gpRE</string>
	<string name="twitter_consumer_url">ryanthomasgray:///</string>
	
</resources>