<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/LinearLayout1"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	
	    <LinearLayout
	        android:id="@+id/LinearLayout2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	        <Button
	            android:id="@+id/checkAll"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/check_all" />
	
	        <Button
	            android:id="@+id/uncheckAll"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/uncheck_all" />
	    </LinearLayout>
	
	    <ScrollView
	        android:id="@+id/scrollView1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <LinearLayout
	            xmlns:android="http://schemas.android.com/apk/res/android"
	            android:id="@+id/LinearLayout3"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
		
	            <Button
	                android:id="@+id/toBottom"
	                android:layout_width="100dip"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:gravity="center"
	                android:text="@string/to_bottom"
	                android:textSize="12sp" />

	            <CheckBox
	                android:id="@+id/abcCheck"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/abc_check" />
	
	            <CheckBox
	                android:id="@+id/apCheck"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/ap_check" />
	
	            <CheckBox
	                android:id="@+id/bbcCheck"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/bbc_check" />
	
	            <CheckBox
	                android:id="@+id/cbcCheck"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/cbc_check" />
	
	            <CheckBox
	                android:id="@+id/cbsCheck"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/cbs_check" />
	
	            <CheckBox
	                android:id="@+id/cnnCheck"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/cnn_check" />
	
	            <CheckBox
	                android:id="@+id/foxCheck"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/fox_check" />
	
	            <CheckBox
	                android:id="@+id/googleCheck"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/google_check" />
	            
	            <CheckBox
	                android:id="@+id/nbcCheck"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/nbc_check" />
	
	            <CheckBox
	                android:id="@+id/reutersCheck"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/reuters_check" />
	
	            <CheckBox
	                android:id="@+id/timeCheck"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/time_check" />
	
	            <CheckBox
	                android:id="@+id/usatodayCheck"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/usatoday_check" />
	
	            <CheckBox
	                android:id="@+id/wnCheck"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/wn_check" />
	
	            <CheckBox
	                android:id="@+id/yahooCheck"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/yahoo_check" />
	            
	            <Button
	                android:id="@+id/toTop"
	                android:layout_width="100dip"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:gravity="center"
	                android:text="@string/to_top"
	                android:textSize="12sp" />
	
	            <Button
	                android:id="@+id/goToNews"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/show_news" />
	        </LinearLayout>
	    </ScrollView>
	
	</LinearLayout>
	
	<ImageView
	    android:id="@+id/loadingImageView"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" 
	    android:layout_centerInParent="true"/>
	
	<TextView
	    android:id="@+id/progressTextView"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:textColor="#9e9e9e"
	    android:textSize="12sp"/>

 </RelativeLayout>